estructura de pagina

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/navbar.css">
     <script defer src="js/index.js"></script>
@@ -27,13 +28,25 @@
                 <button id="btnCerrar" class="closeMenu" aria-label="Cerrar menú">
                     <img src="Images/close-icon.svg">
                 </button>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">nosotros</a></li>
+                <li><a href="#Inicio">Inicio</a></li>
+                <li><a href="#Nos">nosotros</a></li>
                 <li><a href="#">contacto</a></li>
             </ul>
         </nav>
    </header>
 
+   <div id="Inicio" > 
+       <div >
+           <h1>Texto para rellenar</h1>
+        <img src="Images/slider1.svg"  alt="computadora" id="slider1" >
+       </div>
+   </section>
+   <section id="Nosotros">
+    <div >
+
+
+    </div>
+</section>
 
 </body>
 </html>
