--- a/Index.html
+++ b/Index.html
@@ -1,52 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,user-scalable=no, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha512-oHDEc8Xed4hiW6CxD7qjbnI+B07vDdX7hEPTvn9pSZO1bcRqHp8mj9pyr+8RVC2GmtEfI2Bi9Ke9Ass0as+zpg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="Fontello/fontello-ed752015/css/fontello.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;700&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/navbar.css">
-    <script defer src="js/index.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-    <title>Gsm tech team</title>
+    <script src="https://kit.fontawesome.com/800f99d2be.js" crossorigin="anonymous"></script>
+    
+
+    <title>Gsm techTeam</title>
 </head>
 <body>
-   <header class="topHeader">
-        <nav class="topNav">
-            <a class="logo"> 
-                <img height="60" width="120"  src="Images/logo-GSM-120-altura-01.png" alt="Logo Grupo San Miguel">
-                <div>
-                    GSM
-                </div>
+<header>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark topNav" >
+    <div class="container-fluid ">
+        <a class="navbar-brand" href="#">
+            <h2>GSM <br>TECH</h2>
+          <!-- <img src="" alt="Grupos san miguel" width="60" height="50" class="d-inline-block align-text-top"> -->
+        </a>
+      </div>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown link
             </a>
-            <button id="btnAbrir" class="openMenu" aria-label="Abrir menú">
-                <img src="Images/hamburger-icon.svg" style="background-color: white;" alt="menu">
-            </button>
-            <ul class="menu">
-                <button id="btnCerrar" class="closeMenu" aria-label="Cerrar menú">
-                    <img src="Images/close-icon.svg">
-                </button>
-                <li><a href="#Inicio">Inicio</a></li>
-                <li><a href="#Nos">nosotros</a></li>
-                <li><a href="#">contacto</a></li>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-        </nav>
-   </header>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
 
-   <div id="Inicio" > 
-       <div >
-           <h1>Texto para rellenar</h1>
-        <img src="Images/slider1.svg"  alt="computadora" id="slider1" >
-       </div>
-   </section>
+    <section class="Inicio"> 
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="images/teclado.jpg" class="d-block w-100" alt="notebook">
+              </div>
+              <div class="carousel-item">
+                <img src="images/cyber-security.jpg" class="d-block w-100" alt="...">
+                <h2>Diseñamos soluciones</h2>
+              </div>
+              <div class="carousel-item">
+                <img src="images/teclado.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </section>
    <section id="Nosotros">
     <div >
-
-
-    </div>
+    </div> 
 </section>
-
+<div>
+    <a href="https://api.whatsapp.com/send?phone=+54911609494" class="btnWsp" target="_blank">
+        <i class="icon-whatsapp" style="margin-bottom: 5px;"></i>
+        </a>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
+<script defer src="js/index.js"></script>
 </body>
 </html>
