mobile casi terminado

--- a/Unirse.html
+++ b/Unirse.html
@@ -44,34 +44,37 @@
         <h1 style="color: #000c33;">Necesitamos tu talento</h1>
         <p style="color: #000c33;">TRABAJA CON NOSOTROS</p>
       </div>
+      <div class="container">
 
-      
-      <img src="Images/FORMULARIO-1.gif" style="width: 327px;"  alt="personas hablando">
-      <form>
-        <input type="text" placeholder="Nombre y apellido" style=" border: none; background: none;">
-        <hr>
-        <input type="text" placeholder="Email" style=" border: none; background: none;">
-        <hr>
-        <input type="text" placeholder="Telefono" style=" border: none; background: none;">
-        <hr>
-        <input type="text" placeholder="Especialidad" style=" border: none; background: none;">
-        <hr>
-        <input type="text" placeholder="Cargar CV" style=" border: none; background: none;">
-        <hr>
-        <p>Estoy de acuerdo con el tratamiento de mis datos personales según la Política de Privacidad 
-            En virtud de lo dispuesto en el Reglamento (UE) 2016/679 del Parlamento europeo y del consejo de 27 de abril de
-             2016 relativo a la protección de las personas físicas en lo que respecta 
-             al tratamiento de datos personales, 
-             GRUPO SAN MIGUEL le informa que sus datos personales incorporados en este formulario, serán incluidos 
-             en un fichero creado bajo nuestra responsabilidad, con la finalidad de comunicarnos con usted para llevar a cabo el mantenimiento y control 
-             de la relación negocial que nos vincula y podrán ser cedidos a terceros para 
-             gestionar la relación negocial. Según el Reglamento (UE) 2016/679 de 27 de abril de 2016, puede ejercitar los derechos de acceso, rectificación,
-              oposición y supresión dirigiéndose por escrito a GRUPO SAN MIGUEL en C/Santillana del mar 14, Local19º,
-              Boadilla del Monte 28660, Madrid o al correo electrónico info@gruposanmiguel.es</p>
-        <input type="radio" name="SI" text="SI" id=""> <p>SI</p>
-        <input type="radio" name="NO" ><p>NO</p>
-        <button>Postularme</button>
-    </form>
+        <img src="Images/FORMULARIO-1.gif" style="width: 327px;"  alt="personas hablando">
+        <form >
+          <input type="text" placeholder="Nombre y apellido" style=" border: none; background: none;">
+          <hr>
+          <input type="text" placeholder="Email" style=" border: none; background: none;">
+          <hr>
+          <input type="text" placeholder="Telefono" style=" border: none; background: none;">
+          <hr>
+          <input type="text" placeholder="Especialidad" style=" border: none; background: none;">
+          <hr>
+          <input type="text" placeholder="Cargar CV" style=" border: none; background: none;">
+          <hr>
+          
+      </form>
+      <p style="color:white;">Estoy de acuerdo con el tratamiento de mis datos personales según la Política de Privacidad 
+        En virtud de lo dispuesto en el Reglamento (UE) 2016/679 del Parlamento europeo y del consejo de 27 de abril de
+         2016 relativo a la protección de las personas físicas en lo que respecta 
+         al tratamiento de datos personales, 
+         GRUPO SAN MIGUEL le informa que sus datos personales incorporados en este formulario, serán incluidos 
+         en un fichero creado bajo nuestra responsabilidad, con la finalidad de comunicarnos con usted para llevar a cabo el mantenimiento y control 
+         de la relación negocial que nos vincula y podrán ser cedidos a terceros para 
+         gestionar la relación negocial. Según el Reglamento (UE) 2016/679 de 27 de abril de 2016, puede ejercitar los derechos de acceso, rectificación,
+          oposición y supresión dirigiéndose por escrito a GRUPO SAN MIGUEL en C/Santillana del mar 14, Local19º,
+          Boadilla del Monte 28660, Madrid o al correo electrónico info@gruposanmiguel.es</p>
+    <input type="radio" name="SI" text="SI" id=""> <p>SI</p>
+    <input type="radio" name="NO" ><p>NO</p>
+    <button>Postularme</button>
+      </div>
+ 
 
 </body>
 </html>
