mobile terminado,solo falta footer responsive

--- a/Index.html
+++ b/Index.html
@@ -128,7 +128,7 @@
                      de penetración para verificar la seguridad del trabajo realizado.</p>              
                 <hr >
 
-                <p id="listaCiber">SERIVICIO DE PERITAJE,INFORMATICO <br>Y FORENSE </p>
+                <p id="listaCiber">SERIVICIO DE PERITAJE,INFORMATICO <br class="brCiber">Y FORENSE </p>
                 <button style="border: none; background: none;display: inline;" id="btnCiber3Abrir" >
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#D1525A" fill="none" stroke-linecap="round" stroke-linejoin="round">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
