--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <a href="index.html"><title >GSM TECH</title></a>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent " >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent "  >
         <div class="container" >
           <a class="navbar-brand" href="#">GSM <br>TECH</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                 <a class="nav-link" href="#desarrolloSection">Desarrollo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Vacantes</a>
+                <a class="nav-link" href="Contratacion.html">Contactanos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="#">Contratamos</a>
