--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Imagenes/GSM-PRINCIPAL.png">
+    <link rel="shortcut icon" href="Images/GSM-PRINCIPAL.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="mobileIndex.css">
     <a href="index.html"><title >GSM TECH</title></a>
   </head>
   <body>
@@ -38,10 +39,15 @@
         </div>
       </div>
     </nav>
-<div>
+<div class="secciones sectionBanner">
   <img src="Images/mundo.png" class="img-fluid ImgPrincipal" alt="planeta tierra">
   <h1 class="tituloBlancoPrincipal">Trabaja con</h1> 
   <h1 class="tituloRojoPrincipal">nosotros</h1>
+  <p class="FrasePrincipal">STAFFING DE NUEVOS TALENTOS </p>
+  <img src="Images/BarraBlanca.png" class="barraBlanca">
+  <p class="descripcionPrincipal1">“Si tu empresa gasta más en café que en seguridad IT, <strong>serás hackeado.</strong>  Es más, merecerás ser hackeado”.</p>
+  <p class="descripcionPrincipal2">Los ataques cibernéticos a empresas han subido esponencialmente en los últimos años, asesorate con nosotros.</p>
+  <p class="descripcionPrincipal3">Contamos con 10 años de experiencia en seguridad informaática, asi como tenemos las mejores capacitaciones.</p>
 </div>
     
     
@@ -56,6 +62,31 @@
            </p>
            <img src="Images/staffing.gif" class="staffing">
            <a href="Unirse.html"><button id="btnStaffing" > Unirme</button></a>        
+    </section>
+
+   
+   
+    <section id="sectionPartner" class="secciones container">
+      <div class="row align-items-start">
+        <div class="col-12 ">
+          <h3 id="tituloPartner">SOMOS </h3>  <h3 id="tituloPartnergRojo">  GSMTECH  </h3>  <h3 id="tituloPartner2">TRABAJANDO EN CONJUNTO CON </h3>
+        </div> 
+      </div>
+        <div class="row align-items-center">
+      <div class="col-4  ">
+        <img src="Images/inhouse blanco.png" class="imgPartner1">
+        <p id="frasePartner1">UNA EMPRESA ESPECIALISTA EN RECURSOS HUMANOS, QUE NOS DA 
+                              ACCESO AL RECLUTAMIENTO DE NUEVOS TALENTOS. </p>
+      </div>  
+      <div class="col-4"> 
+        <img class="imgPartner2" src="Images/gif-partner.gif" alt="gente armando rompecabeza">
+      </div>
+        <div class="col-4 ">
+          <img src="Images/the brigde blanco.png" class="imgPartner3">
+          <p id="frasePartner2">ES UNA PLATAFORMA EDUCATIVA QUE TIENE LA <br> MEJOR POSIBILIDAD DE 
+            FORMAR NUEVOS TALENTOS DIGITALES PARA ATENDER A LA CRECIENTE DEMANDA DEL SECTOR EMPRESARIAL.</p>
+      </div>
+    </div>  
     </section>
 
 
@@ -293,12 +324,20 @@
   </div>
   <div class="clientes" >
     <p id="tituloClientes">CLIENTES QUE CONFÍAN EN NOSOTROS</p>
-    <img src="Images/black&deker.png" alt="" class="ImgMarcas" >
-    <img src="Images/BMW.png" alt="" class="ImgMarcas">
-    <img src="Images/BAYER.png" alt="" class="ImgMarcas">
-    <img src="Images/PFIZER.png" alt="" class="ImgMarcas">
-    <img src="Images/philip_morris.png" alt="" id="imgPhilips" class="ImgMarcas" >
-    <img src="Images/coca cola.png" alt="" id="imgCoca" class="ImgMarcas" >
+      <img src="Images/black&deker.png" alt="" class="ImgMarcas" >
+      <img src="Images/BMW.png" alt="" class="ImgMarcas">
+
+
+      <img src="Images/BAYER.png" alt="" class="ImgMarcas">
+
+
+      <img src="Images/PFIZER.png" alt="" class="ImgMarcas">
+
+
+      <img src="Images/philip_morris.png" alt="" id="imgPhilips" class="ImgMarcas" >
+
+      <img src="Images/coca cola.png" alt="" id="imgCoca" class="ImgMarcas" >
+
   </div>
 
   <section id="PreguntasSection" class="secciones container">  
@@ -318,7 +357,7 @@
           <line x1="5" y1="12" x2="19" y2="12" />
         </svg>
       </button>
-        <p id="texto1" style="display:none ; color: white;">Somos la unidad de transformación digital de Grupo San <br>
+        <p id="texto1" style="display:none; color: white;">Somos la unidad de transformación digital de Grupo San <br>
            Miguel en España, Argentina y Paraguay. Nuestro equipo <br>
             de programadores cuenta con 30 años de experiencia.</p>                
         <hr>
@@ -343,7 +382,7 @@
             tiempos de desarrollo e implementación</p>              
         <hr >
 
-        <p id="listaPregunta"> ¿POR QUÉ TENEMOS EL MEJOR <br> PRECIO?</p>
+        <p id="listaPregunta"> ¿POR QUÉ TENEMOS SIEMPRE <br> EL MEJOR  PRECIO?</p>
         <button style="border: none; background: none;display: inline;" id="btnPRegunta3Abrir" >
           <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plus" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#D1525A" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -398,14 +437,14 @@
      </div>
 
      <img src="Images/mensaje-1.gif" id="ImgPregunta" class="ImagenesServicios container">
-     <p id="descripcionPregunta">Emails</p>
-     <a class="mails" href="mailto:info@gruposanmiguel.es">info@gruposanmiguel.es</a>
-     <a class="mails" href="mailto:info@gsmtech.com">info@gsmtech.com</a>
+     <p id="descripcionPregunta">Emails:</p>
+     <a class="mail1" href="mailto:info@gruposanmiguel.es">info@gruposanmiguel.es</a>
+     <a class="mail2" href="mailto:info@gsmtech.com">info@gsmtech.com</a>
   </section>
 
   <a href="https://api.whatsapp.com/send?phone=" class="btnWsp" target="_blank">
     <i class="fa fa-whatsapp icono"></i>
-</a>
+  </a>
 
 
     <div id="divFooter" >
