--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,8 @@
     <a href="index.html"><title >GSM TECH</title></a>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" >
-      <div class="container" >
+    <nav class="navbar  navbar-expand-lg navbar-expand-xs navbar-dark" >
+      <div class="container " >
         <a class="navbar-brand" href="#">GSM <br>TECH</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -519,7 +519,7 @@
             </ul>
           </div>
     
-          <div class="col-12 offset-1">
+          <div class="col-4 offset-1">
             <form class="formFooter">
               <h5>Subscribete a nuestro newsletter</h5>
               <p>Informacion por semana.</p>
