--- a/Index.html
+++ b/Index.html
@@ -23,17 +23,25 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#"  id="navlink">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#CiberSeguridadSection"  id="navlink">Ciberseguridad</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Solution
+              </a>
+              <ul class="dropdown-menu" style="background:#000C33;" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" style="color: white;" href="#sectionPartner">Partner</a></li>
+                <li><hr class="dropdown-divider" style="color: rgb(209, 82, 90);margin-left: 19px;width: 88%;;"></li>
+                <li><a class="dropdown-item" style="color:white ;" href="#OutsourcingSection">Outsourcing</a></li>
+                <li><hr class="dropdown-divider" style="color: rgb(209, 82, 90);margin-left: 19px;width: 88%;"></li>
+                <li><a class="dropdown-item" style="color: white;" href="#desarrolloSection">Desarrollo</a></li>
+                <li><hr class="dropdown-divider"style="color: rgb(209, 82, 90);margin-left: 19px;width: 88%;"></li>
+                <li><a class="dropdown-item" style="color: white;" href="#CiberSeguridadSection">Ciberseguridad</a></li>
+              </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#desarrolloSection"  id="navlink">Desarrollo</a>
+              <a class="nav-link " id="navlink" href="Unirse.html">Vacantes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Contratanos.html"  id="navlink">Contactanos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" id="navlink" href="Unirse.html">Contratamos</a>
+              <a class="nav-link active" id="navlink" href="Contratanos.html">Contact Us</a>
             </li>
           </ul>
         </div>
