--- a/Contratanos.html
+++ b/Contratanos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="Imagenes/GSM-PRINCIPAL.png">
+    <link rel="shortcut icon" href="Images/GSM-PRINCIPAL.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
    
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
@@ -15,33 +15,41 @@
     <link rel="stylesheet" href="mobileContratacion.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent "  >
-        <div class="container">
-          <a class="navbar-brand" href="#">GSM <br>TECH</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html/CiberSeguridadSection">Ciberseguridad</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="index.html/DesarrolloSection">Desarrollo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Contratanos.html">Contactanos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Unirse.html">Contratamos</a>
-              </li>
+  <nav class="navbar  navbar-expand-lg navbar-expand-xs navbar-dark" >
+    <div class="container " >
+      <a class="navbar-brand" href="Index.html">GSM <br>TECH</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="Index.html"  id="navlink">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Solution
+            </a>
+            <ul class="dropdown-menu" style="background:#000C33;" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" style="color: white;" href="index.html#sectionPartner">Partner</a></li>
+              <li><hr class="dropdown-divider" style="color: rgb(209, 82, 90);margin-left: 19px;width: 88%;;"></li>
+              <li><a class="dropdown-item" style="color:white ;" href="index.html#OutsourcingSection">Outsourcing</a></li>
+              <li><hr class="dropdown-divider" style="color: rgb(209, 82, 90);margin-left: 19px;width: 88%;"></li>
+              <li><a class="dropdown-item" style="color: white;" href="index.html#desarrolloSection">Desarrollo</a></li>
+              <li><hr class="dropdown-divider"style="color: rgb(209, 82, 90);margin-left: 19px;width: 88%;"></li>
+              <li><a class="dropdown-item" style="color: white;" href="index.html#CiberSeguridadSection">Ciberseguridad</a></li>
             </ul>
-          </div>
-        </div>
-      </nav> 
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " id="navlink" href="Unirse.html">Vacantes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" id="navlink" href="Contratanos.html">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
      
       <h1 class="container TituloBlanco"> Déjanos</h1><h1 class="TituloRojoDatos">tus datos</h1>
 
